--- a/manuscripts/24-jb-dags/24-jb-dags.qmd
+++ b/manuscripts/24-jb-dags/24-jb-dags.qmd
@@ -953,7 +953,7 @@ When asking causal questions about the economic effect of adopting Protestantism
 
 **Causal Consistency**: This requires that the outcome under each level of treatment to be compared is well-defined. In this context, defining what 'adopting Protestantism' and 'remaining Catholic' mean may present challenges. The practices and beliefs of each religion might vary significantly across countries and time periods, making it difficult to create a consistent, well-defined treatment. Furthermore, the outcome—economic development—may also be challenging to measure consistently across different countries and time periods.
 
-There is undoubtedly considerable heterogeneity in the 'Protestant treatment.' In England, Protestantism was closely tied to the monarchy [@collinson2003]. In Germany, Martin Luther's teachings emphasized individual faith in scripture, which, it has been claimed, supported economic development by promoting literacy [@gawthrop1984]. In England, King Henry VIII abolished Catholicism [@collinson2003]. The Reformation, then, occurred differently in different places. The treatment needs to be better defined.
+There is undoubtedly considerable heterogeneity in the 'Protestant treatment.' In England, Protestantism was closely tied to the monarchy [@collinson2003]. In Germany, Martin Luther's teachings emphasised individual faith in scripture, which, it has been claimed, supported economic development by promoting literacy [@gawthrop1984]. In England, King Henry VIII abolished Catholicism [@collinson2003]. The Reformation, then, occurred differently in different places. The treatment needs to be better defined.
 
 There is also ample scope for interference: 16th-century societies were interconnected through trade, diplomacy, and warfare. Thus, the religious decisions of one society were unlikely to have been independent from those of other societies.
 
