--- a/manuscripts/24-jb-dags/24-jb-dags.tex
+++ b/manuscripts/24-jb-dags/24-jb-dags.tex
@@ -2434,7 +2434,7 @@ consistently across different countries and time periods.
 There is undoubtedly considerable heterogeneity in the `Protestant
 treatment.' In England, Protestantism was closely tied to the monarchy
 (\citeproc{ref-collinson2003}{Collinson 2003}). In Germany, Martin
-Luther's teachings emphasized individual faith in scripture, which, it
+Luther's teachings emphasised individual faith in scripture, which, it
 has been claimed, supported economic development by promoting literacy
 (\citeproc{ref-gawthrop1984}{Gawthrop and Strauss 1984}). In England,
 King Henry VIII abolished Catholicism
