--- a/manuscripts/24-jb-dags/24-jb-experiments.qmd
+++ b/manuscripts/24-jb-dags/24-jb-experiments.qmd
@@ -1,8 +1,9 @@
 ---
 title: 'Confounding in Experiments'
 abstract: |
-  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled experiments (trials), treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
-  **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*; *RTC*. 
+  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled experiments (trials), treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs (causal DAGs) to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
+  
+  **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*; *RCT*. 
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
