--- a/manuscripts/24-jb-dags/24-jb-experiments.tex
+++ b/manuscripts/24-jb-dags/24-jb-experiments.tex
@@ -217,13 +217,14 @@
 Confounding bias arises when a treatment and outcome share a common
 cause. In randomised controlled experiments (trials), treatment
 assignment is random, ostensibly eliminating confounding bias. Here, we
-use causal directed acyclic graphs to unveil eight structural sources of
-bias that nevertheless persist in these trials. This analysis highlights
-the crucial role of causal inference methods in the design and analysis
-of experiments, ensuring the validity of conclusions drawn from
-experimental data. \textbf{Keywords:} \emph{Causal Inference};
-\emph{Experiments}; \emph{DAGs}; \emph{Evolution}; \emph{Per Protocol
-Effect}; \emph{Intention to Treat Effect}; \emph{RTC}.
+use causal directed acyclic graphs (causal DAGs) to unveil eight
+structural sources of bias that nevertheless persist in these trials.
+This analysis highlights the crucial role of causal inference methods in
+the design and analysis of experiments, ensuring the validity of
+conclusions drawn from experimental data. \textbf{Keywords:}
+\emph{Causal Inference}; \emph{Experiments}; \emph{DAGs};
+\emph{Evolution}; \emph{Per Protocol Effect}; \emph{Intention to Treat
+Effect}; \emph{RCT}.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
