--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -220,13 +220,13 @@ The analysis of `moderation', `interaction', `mediation', and
 to confusion. To clarify these concepts, it is essential to state causal
 estimands, which requires specifying counterfactual contrasts for a
 target population on an appropriate scale. Once causal estimands are
-defined, we must consider their identification. I employ both causal
-acyclic diagrams and single world intervention graphs to elucidate the
-identification process. This approach reveals that common methods,
-including sophisticated techniques in multi-level regression and
-statistical structural equation modelling, cannot recover the quantities
-of interest when multiple treatments exist. By framing and addressing
-causal questions of interaction, mediation, and time-varying treatments
+defined, we must consider their identification. I employ causal directed
+acyclic diagrams (causal DAGs) and Single World Intervention Graphs to
+elucidate identification workflows. I show that when multiple treatments
+exist, common methods for statistical inference, such as multi-level
+regressions and statistical structural equation models, cannot typically
+recover the causal quantities we seek. By framing and addressing causal
+questions of interaction, mediation, and time-varying treatments
 properly, we can expose the limitations of popular methods and guide
 researchers to a clearer understanding of the phenomena that animate our
 interests. \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{DAGs};
