--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -1,8 +1,8 @@
 ---
 title: 'Causal Inference: Interaction, Mediation, and Time-Varying Treatments'
 abstract: |
-  The analysis of 'moderation', 'interaction', 'mediation', and 'longitudinal growth' is widespread in the human sciences, yet subject to confusion. To clarify these concepts, it is essential to state causal estimands, which requires specifying counterfactual contrasts for a target population on an appropriate scale. Once causal estimands are defined, we must consider their identification. I employ both causal acyclic diagrams and single world intervention graphs to elucidate the identification process. This approach reveals that common methods, including sophisticated techniques in multi-level regression and statistical structural equation modelling, cannot recover the quantities of interest when multiple treatments exist. By framing and addressing causal questions of interaction, mediation, and time-varying treatments properly, we can expose the limitations of popular methods and guide researchers to a clearer understanding of the phenomena that animate our interests.
-  **KEYWORDS**: *Causal Inference*; *DAGs*; *Evolution*; *Mediation*; *Moderation*; *Longitudinal Growth*; Single World Intervention Graphs, *SWIGs*; *Time-varying Treatments*
+   The analysis of 'moderation', 'interaction', 'mediation', and 'longitudinal growth' is widespread in the human sciences, yet subject to confusion. To clarify these concepts, it is essential to state causal estimands, which requires specifying counterfactual contrasts for a target population on an appropriate scale. Once causal estimands are defined, we must consider their identification. I employ causal directed acyclic diagrams (causal DAGs) and Single World Intervention Graphs to elucidate identification workflows. I show that when multiple treatments exist, common methods for statistical inference, such as multi-level regressions and statistical structural equation models, cannot typically recover the causal quantities we seek. By framing and addressing causal questions of interaction, mediation, and time-varying treatments properly, we can expose the limitations of popular methods and guide researchers to a clearer understanding of the phenomena that animate our interests.
+   **KEYWORDS**: *Causal Inference*; *DAGs*; *Evolution*; *Mediation*; *Moderation*; *Longitudinal Growth*; Single World Intervention Graphs, *SWIGs*; *Time-varying Treatments*
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
