--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
@@ -1,5 +1,5 @@
 ---
-title: 'Causal Directed Acyclic Graphs (DAGs): A Practical Guide'
+title: 'Methods in Causal Inference Part 1: Causal Diagrams and Confounding'
 abstract: |
   Causal inference requires contrasting counterfactual states of the world under pre-specified interventions. Obtaining counterfactual contrasts from data relies on explicit assumptions and careful, multi-step workflows. Causal diagrams are powerful tools for clarifying whether and how the counterfactual contrasts we seek can be identified from data. Here, I explain how to use causal directed acyclic graphs (causal DAGs) to determine whether and how causal effects can be identified from 'real-world' non-experimental observational data. I offer practical tips for reporting and suggest ways to avoid common pitfalls.
 
