--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Directed Acyclic Graphs (DAGs): A Practical Guide},
+  pdftitle={Methods in Causal Inference Part 1: Causal Diagrams and Confounding},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,7 +197,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Directed Acyclic Graphs (DAGs): A Practical Guide}
+\title{Methods in Causal Inference Part 1: Causal Diagrams and
+Confounding}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -210,7 +211,7 @@
       
 
 
-\date{2024-06-10}
+\date{2024-06-11}
 \begin{document}
 \maketitle
 \begin{abstract}
