--- a/manuscripts/24-accepted-ehs/part-3-measurement/part-3=measurement-validity.qmd
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/part-3=measurement-validity.qmd
@@ -825,51 +825,46 @@ Glossary
 
 {{< pagebreak >}}
 
-## Appendix B: Generalisability and Transportability  {#id-app-b}
 
-**Generalisability:** When a study sample is drawn randomly from the target population, we may generalise from the sample to the target population as follows:
+## Appendix B: Generalisability and Transportability {#id-app-b}
+
+Generalisability: When a study sample is drawn randomly from the target population, we may generalise from the sample to the target population as follows.
 
 Suppose we sample randomly from the target population, where:
 
--   $n_S$ denotes the size of the study's analytic sample $S$.
--   $N_T$ denotes the total size of the target population $T$.
--   $\widehat{ATE}_{n_S}$ denotes the estimated average treatment effect in the analytic sample $S$.
--   $ATE_{T}$ denotes the true average treatment effect in the target population $T$.
+- $n_S$ denotes the size of the study's analytic sample $S$.
+- $N_T$ denotes the total size of the target population $T$.
+- $\widehat{ATE}_{n_S}$ denotes the estimated average treatment effect in the analytic sample $S$.
+- $ATE_{T}$ denotes the true average treatment effect in the target population $T$.
+- $\epsilon$ denotes an arbitrarily small positive value.
 
 Assuming the rest of the causal inference workflow goes to plan (randomisation succeeds, there is no measurement error, no model misspecification, etc.), as the random sample size $n_S$ increases, the estimated treatment effect in the analytic sample $S$ converges in probability to the true treatment effect in the target population $T$:
 
-$$
-\lim_{n_S \to N_T} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1
-$$
+$$ \lim_{n_S \to \infty} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1 $$
 
 for any small positive value of $\epsilon$.
 
-**Transportability:** We cannot directly generalise the findings When the analytic sample is not drawn from the target population. However, we can transport the estimated causal effect from the source population to the target population under certain assumptions. This involves adjusting for differences in the distributions of effect modifiers between the two populations. The closer the source population is to the target population, the more plausible the transportability assumptions are, and the less we need to rely on complex adjustment methods.
-
+Transportability: When the analytic sample is not drawn from the target population, we cannot directly generalise the findings. However, we can transport the estimated causal effect from the source population to the target population under certain assumptions. This involves adjusting for differences in the distributions of effect modifiers between the two populations. The closer the source population is to the target population, the more plausible the transportability assumptions are, and the less we need to rely on complex adjustment methods.
 Suppose we have an analytic sample $n_S$ drawn from a source population $S$, and we want to estimate the average treatment effect in a target population $T$.
-
 Define:
 
--   $\widehat{ATE}_{S}$ as the estimated average treatment effect in the source population $S$.
--   $\widehat{ATE}_{T}$ as the estimated average treatment effect in the target population $T$.
--   $f(n_S, R)$ as the mapping function that adjusts the estimated effect in the analytic sample using a set of measured covariates $R$, allowing for valid projection to the target population.
+$\widehat{ATE}_{S}$ as the estimated average treatment effect in the analytic sample drawn from the source population $S$.
+$\widehat{ATE}_{T}$ as the estimated average treatment effect in the target population $T$.
+$f(n_S, R)$ as the mapping function that adjusts the estimated effect in the analytic sample using a set of measured covariates $R$, allowing for valid projection from the source population to the target population.
 
 The transportability assumption is that there exists a function $f$ such that:
-
-$$
-\widehat{ATE}_{T} = f(n_S, R)
-$$
+$$ \widehat{ATE}_{T} = f(n_S, R) $$
 
 Finding a suitable function $f$ is the central challenge in adjusting for sampling bias and achieving transportability [@bareinboim2013general; @westreich2017transportability; @dahabreh2019generalizing; @deffner2022].
 
-
 {{< pagebreak >}}
-
 ## Appendix C: Explanation for the Difference in Marginal Effects between Censored and Uncensored Populations {#id-app-c}
+
+This appendix provides an explanation for the observed difference in marginal effects between censored and uncensored populations in the study.
 
 #### Definitions:
 
-- **$A$**: Exposure variable
+- **$A$**: Exposure variable, where $a$ represents the reference level and $a^*$ represents the comparison level
 - **$Y$**: Outcome variable
 - **$F$**: Effect modifier
 - **$C$**: Indicator for the uncensored population ($C = 0$) or the censored population ($C = 1$)
@@ -878,45 +873,31 @@ Finding a suitable function $f$ is the central challenge in adjusting for sampli
 
 The average treatment effects for the uncensored and censored populations are defined as:
 
-$$
-\Delta_{\text{uncensored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 0]
-$$
+$$ \Delta_{\text{uncensored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 0] $$
 
-$$
-\Delta_{\text{censored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 1]
-$$
+$$ \Delta_{\text{censored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 1] $$
 
 #### Potential Outcomes:
 
 By causal consistency, potential outcomes can be expressed in terms of observed outcomes:
 
-$$
-\Delta_{\text{uncensored}} = \mathbb{E}[Y \mid A=a^*, C=0] - \mathbb{E}[Y \mid A=a, C=0]
-$$
+$$ \Delta_{\text{uncensored}} = \mathbb{E}[Y \mid A=a^*, C=0] - \mathbb{E}[Y \mid A=a, C=0] $$
 
-$$
-\Delta_{\text{censored}} = \mathbb{E}[Y \mid A=a^*, C=1] - \mathbb{E}[Y \mid A=a, C=1]
-$$
+$$ \Delta_{\text{censored}} = \mathbb{E}[Y \mid A=a^*, C=1] - \mathbb{E}[Y \mid A=a, C=1] $$
 
 #### Law of Total Probability:
 
 Applying the Law of Total Probability, we can weight the average treatment effects by the conditional probability of the effect modifier $F$:
 
-$$
-\Delta_{\text{uncensored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\right\} \times \Pr(F=f \mid C=0)
-$$
+$$ \Delta_{\text{uncensored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\right\} \times \Pr(F=f \mid C=0) $$
 
-$$
-\Delta_{\text{censored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\right\} \times \Pr(F=f \mid C=1)
-$$
+$$ \Delta_{\text{censored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\right\} \times \Pr(F=f \mid C=1) $$
 
 #### Assumption of Informative Censoring:
 
-We assume that the effect modifier $F$ has a different distribution in the censored and uncensored populations:
+We assume that the distribution of the effect modifier $F$ differs between the censored and uncensored populations:
 
-$$
-\Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1)
-$$
+$$ \Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1) $$
 
 Under this assumption, the probability weights used to calculate the marginal effects for the uncensored and censored populations differ.
 
@@ -924,27 +905,19 @@ Under this assumption, the probability weights used to calculate the marginal ef
 
 Given that $\Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1)$, we cannot guarantee that:
 
-$$
-\Delta_{\text{uncensored}} = \Delta_{\text{censored}}
-$$
+$$ \Delta_{\text{uncensored}} = \Delta_{\text{censored}} $$
 
-The equality of marginal effects between the two populations will only hold if there is a universal null effect across all units, by chance, or under specific conditions discussed by @vanderweele2007 and further elucidated by @suzuki2013counterfactual. Otherwise:
+The equality of marginal effects between the two populations will only hold if there is a universal null effect (i.e., no effect of the exposure on the outcome for any individual) across all units, by chance, or under specific conditions discussed by @vanderweele2007 and further elucidated by @suzuki2013counterfactual. Otherwise:
 
-$$
-\Delta_{\text{uncensored}} \ne \Delta_{\text{censored}}
-$$
+$$ \Delta_{\text{uncensored}} \ne \Delta_{\text{censored}} $$
 
 Furthermore, @vanderweele2012 proved that if there is effect modification of $A$ by $F$, there will be a difference in at least one scale of causal contrast, such that:
 
-$$
-\Delta^{\text{risk ratio}}_{\text{uncensored}} \ne \Delta^{\text{risk ratio}}_{\text{censored}}
-$$
+$$ \Delta^{\text{risk ratio}}_{\text{uncensored}} \ne \Delta^{\text{risk ratio}}_{\text{censored}} $$
 
 or
 
-$$
-\Delta^{\text{difference}}_{\text{uncensored}} \ne \Delta^{\text{difference}}_{\text{censored}}
-$$
+$$ \Delta^{\text{difference}}_{\text{uncensored}} \ne \Delta^{\text{difference}}_{\text{censored}} $$
 
 For comprehensive discussions on sampling and inference, refer to @dahabreh2019 and @dahabreh2021study.
 {{< pagebreak >}}
@@ -977,9 +950,7 @@ We assume the treatment effect is the same in the sample and target populations,
 
 That is: **the distribution of effect modifiers is the only respect in which the sample will differ from the target population.**
 
-This function will generate data under a range of scenarios.[^margot]
-
-[^margot]: See documentation in the `margot` package: @margot2024
+This function will generate data under a range of scenarios. Refer to documentation in the `margot` package: @margot2024
 
 ```{r}
 # function to generate data for the sample and population, 
