--- a/manuscripts/24-accepted-ehs/part-3-measurement/part-3=measurement-validity.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/part-3=measurement-validity.tex
@@ -375,7 +375,7 @@ graphs (causal DAGs). Readers familiar with causal directed acyclic
 graphs may skip this section. I encourage readers unfamiliar with causal
 directed acyclic graphs to develop familiarity before proceeding:
 (\citeproc{ref-barrett2021}{Barrett 2021};
-\citeproc{ref-bulbulia2023}{Bulbulia 2023};
+\citeproc{ref-bulbulia2023}{Bulbulia 2024c};
 \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024 Chapter 6};
 \citeproc{ref-mcelreath2020}{McElreath 2020 Chapters 5, 6};
 \citeproc{ref-neal2020introduction}{Neal 2020};
@@ -966,7 +966,7 @@ corresponding to these rules. Because all causal relationships can be
 assembled from combinations of the five structures presented in
 Table~\ref{tbl-terminologygeneral}, we can use causal graphs to evaluate
 whether and how causal effects may be identified from data
-(\citeproc{ref-bulbulia2023}{Bulbulia 2023}).
+(\citeproc{ref-bulbulia2023}{Bulbulia 2024c}).
 
 Pearl's general identification algorithm is known as the `back door
 adjustment theorem' (\citeproc{ref-pearl2009a}{Pearl 2009}).
@@ -1865,7 +1865,7 @@ population restriction biases can be approached as measurement error
 biases, our results extend to target restriction biases as well.
 
 SWIGs operate by `node-splitting' at each intervention
-(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024b};
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024d};
 \citeproc{ref-richardson2013}{Richardson and Robins 2013a}), dividing
 the intervention into a random component and a fixed component. Nodes
 that follow a fixed intervention are relabeled with the value of the
@@ -2347,22 +2347,13 @@ Bulbulia, J (2024a) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
 doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
-\bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, J (2024b) Causal inference: Interaction, mediation, and
-time-varying treatments. \emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/vr268}{10.31234/osf.io/vr268}.
-
 \bibitem[\citeproctext]{ref-bulbulia2022}
 Bulbulia, JA (2022) A workflow for causal inference in cross-cultural
 psychology. \emph{Religion, Brain \& Behavior}, \textbf{0}(0), 1--16.
 doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
 
-\bibitem[\citeproctext]{ref-bulbulia2023}
-Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
-practical guide.
-
 \bibitem[\citeproctext]{ref-margot2024}
-Bulbulia, JA (2024c) \emph{Margot: MARGinal observational
+Bulbulia, JA (2024b) \emph{Margot: MARGinal observational
 treatment-effects}.
 doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
 
@@ -2370,6 +2361,16 @@ doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
 Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
 Long-term causal effects of far-right terrorism in {N}ew {Z}ealand.
 \emph{PNAS Nexus}, \textbf{2}(8), pgad242.
+
+\bibitem[\citeproctext]{ref-bulbulia2023}
+Bulbulia, JosephA (2024c) Methods in causal inference part 1: Causal
+diagrams and confounding. \emph{Evolutionary Human Sciences},
+\textbf{6}.
+
+\bibitem[\citeproctext]{ref-bulbulia2024swigstime}
+Bulbulia, JosephA (2024d) Methods in causal inference part 2:
+Interaction, mediation, and time-varying treatments. \emph{Evolutionary
+Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-carroll2006measurement}
 Carroll, RJ, Ruppert, D, Stefanski, LA, and Crainiceanu, CM (2006)
@@ -2762,9 +2763,9 @@ weights. \emph{American Journal of Epidemiology}, \textbf{186}(8),
 \subsection{Appendix B: Generalisability and
 Transportability}\label{id-app-b}
 
-\textbf{Generalisability:} When a study sample is drawn randomly from
-the target population, we may generalise from the sample to the target
-population as follows:
+Generalisability: When a study sample is drawn randomly from the target
+population, we may generalise from the sample to the target population
+as follows.
 
 Suppose we sample randomly from the target population, where:
 
@@ -2780,6 +2781,8 @@ Suppose we sample randomly from the target population, where:
 \item
   \(ATE_{T}\) denotes the true average treatment effect in the target
   population \(T\).
+\item
+  \(\epsilon\) denotes an arbitrarily small positive value.
 \end{itemize}
 
 Assuming the rest of the causal inference workflow goes to plan
@@ -2788,48 +2791,32 @@ misspecification, etc.), as the random sample size \(n_S\) increases,
 the estimated treatment effect in the analytic sample \(S\) converges in
 probability to the true treatment effect in the target population \(T\):
 
-\[
-\lim_{n_S \to N_T} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1
-\]
+\[ \lim_{n_S \to \infty} P(|\widehat{ATE}_{n_S} - ATE_{T}| < \epsilon) = 1 \]
 
 for any small positive value of \(\epsilon\).
 
-\textbf{Transportability:} We cannot directly generalise the findings
-When the analytic sample is not drawn from the target population.
-However, we can transport the estimated causal effect from the source
-population to the target population under certain assumptions. This
-involves adjusting for differences in the distributions of effect
-modifiers between the two populations. The closer the source population
-is to the target population, the more plausible the transportability
-assumptions are, and the less we need to rely on complex adjustment
-methods.
+Transportability: When the analytic sample is not drawn from the target
+population, we cannot directly generalise the findings. However, we can
+transport the estimated causal effect from the source population to the
+target population under certain assumptions. This involves adjusting for
+differences in the distributions of effect modifiers between the two
+populations. The closer the source population is to the target
+population, the more plausible the transportability assumptions are, and
+the less we need to rely on complex adjustment methods. Suppose we have
+an analytic sample \(n_S\) drawn from a source population \(S\), and we
+want to estimate the average treatment effect in a target population
+\(T\). Define:
 
-Suppose we have an analytic sample \(n_S\) drawn from a source
-population \(S\), and we want to estimate the average treatment effect
-in a target population \(T\).
-
-Define:
-
-\begin{itemize}
-\tightlist
-\item
-  \(\widehat{ATE}_{S}\) as the estimated average treatment effect in the
-  source population \(S\).
-\item
-  \(\widehat{ATE}_{T}\) as the estimated average treatment effect in the
-  target population \(T\).
-\item
-  \(f(n_S, R)\) as the mapping function that adjusts the estimated
-  effect in the analytic sample using a set of measured covariates
-  \(R\), allowing for valid projection to the target population.
-\end{itemize}
+\(\widehat{ATE}_{S}\) as the estimated average treatment effect in the
+analytic sample drawn from the source population \(S\).
+\(\widehat{ATE}_{T}\) as the estimated average treatment effect in the
+target population \(T\). \(f(n_S, R)\) as the mapping function that
+adjusts the estimated effect in the analytic sample using a set of
+measured covariates \(R\), allowing for valid projection from the source
+population to the target population.
 
 The transportability assumption is that there exists a function \(f\)
-such that:
-
-\[
-\widehat{ATE}_{T} = f(n_S, R)
-\]
+such that: \[ \widehat{ATE}_{T} = f(n_S, R) \]
 
 Finding a suitable function \(f\) is the central challenge in adjusting
 for sampling bias and achieving transportability
@@ -2844,12 +2831,17 @@ for sampling bias and achieving transportability
 \subsection{Appendix C: Explanation for the Difference in Marginal
 Effects between Censored and Uncensored Populations}\label{id-app-c}
 
+This appendix provides an explanation for the observed difference in
+marginal effects between censored and uncensored populations in the
+study.
+
 \paragraph{Definitions:}\label{definitions}
 
 \begin{itemize}
 \tightlist
 \item
-  \textbf{\(A\)}: Exposure variable
+  \textbf{\(A\)}: Exposure variable, where \(a\) represents the
+  reference level and \(a^*\) represents the comparison level
 \item
   \textbf{\(Y\)}: Outcome variable
 \item
@@ -2864,26 +2856,18 @@ Effects between Censored and Uncensored Populations}\label{id-app-c}
 The average treatment effects for the uncensored and censored
 populations are defined as:
 
-\[
-\Delta_{\text{uncensored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 0]
-\]
+\[ \Delta_{\text{uncensored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 0] \]
 
-\[
-\Delta_{\text{censored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 1]
-\]
+\[ \Delta_{\text{censored}} = \mathbb{E}[Y(a^*) - Y(a) \mid C = 1] \]
 
 \paragraph{Potential Outcomes:}\label{potential-outcomes}
 
 By causal consistency, potential outcomes can be expressed in terms of
 observed outcomes:
 
-\[
-\Delta_{\text{uncensored}} = \mathbb{E}[Y \mid A=a^*, C=0] - \mathbb{E}[Y \mid A=a, C=0]
-\]
+\[ \Delta_{\text{uncensored}} = \mathbb{E}[Y \mid A=a^*, C=0] - \mathbb{E}[Y \mid A=a, C=0] \]
 
-\[
-\Delta_{\text{censored}} = \mathbb{E}[Y \mid A=a^*, C=1] - \mathbb{E}[Y \mid A=a, C=1]
-\]
+\[ \Delta_{\text{censored}} = \mathbb{E}[Y \mid A=a^*, C=1] - \mathbb{E}[Y \mid A=a, C=1] \]
 
 \paragraph{Law of Total Probability:}\label{law-of-total-probability}
 
@@ -2891,23 +2875,17 @@ Applying the Law of Total Probability, we can weight the average
 treatment effects by the conditional probability of the effect modifier
 \(F\):
 
-\[
-\Delta_{\text{uncensored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\right\} \times \Pr(F=f \mid C=0)
-\]
+\[ \Delta_{\text{uncensored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=0] - \mathbb{E}[Y \mid A=a, F=f, C=0]\right\} \times \Pr(F=f \mid C=0) \]
 
-\[
-\Delta_{\text{censored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\right\} \times \Pr(F=f \mid C=1)
-\]
+\[ \Delta_{\text{censored}} = \sum_{f} \left\{\mathbb{E}[Y \mid A=a^*, F=f, C=1] - \mathbb{E}[Y \mid A=a, F=f, C=1]\right\} \times \Pr(F=f \mid C=1) \]
 
 \paragraph{Assumption of Informative
 Censoring:}\label{assumption-of-informative-censoring}
 
-We assume that the effect modifier \(F\) has a different distribution in
-the censored and uncensored populations:
+We assume that the distribution of the effect modifier \(F\) differs
+between the censored and uncensored populations:
 
-\[
-\Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1)
-\]
+\[ \Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1) \]
 
 Under this assumption, the probability weights used to calculate the
 marginal effects for the uncensored and censored populations differ.
@@ -2918,34 +2896,27 @@ Populations:}\label{effect-estimates-for-censored-and-uncensored-populations}
 Given that \(\Pr(F=f \mid C=0) \neq \Pr(F=f \mid C=1)\), we cannot
 guarantee that:
 
-\[
-\Delta_{\text{uncensored}} = \Delta_{\text{censored}}
-\]
+\[ \Delta_{\text{uncensored}} = \Delta_{\text{censored}} \]
 
 The equality of marginal effects between the two populations will only
-hold if there is a universal null effect across all units, by chance, or
-under specific conditions discussed by VanderWeele and Robins
+hold if there is a universal null effect (i.e., no effect of the
+exposure on the outcome for any individual) across all units, by chance,
+or under specific conditions discussed by VanderWeele and Robins
 (\citeproc{ref-vanderweele2007}{2007}) and further elucidated by Suzuki
 \emph{et al.} (\citeproc{ref-suzuki2013counterfactual}{2013}).
 Otherwise:
 
-\[
-\Delta_{\text{uncensored}} \ne \Delta_{\text{censored}}
-\]
+\[ \Delta_{\text{uncensored}} \ne \Delta_{\text{censored}} \]
 
 Furthermore, VanderWeele (\citeproc{ref-vanderweele2012}{2012}) proved
 that if there is effect modification of \(A\) by \(F\), there will be a
 difference in at least one scale of causal contrast, such that:
 
-\[
-\Delta^{\text{risk ratio}}_{\text{uncensored}} \ne \Delta^{\text{risk ratio}}_{\text{censored}}
-\]
+\[ \Delta^{\text{risk ratio}}_{\text{uncensored}} \ne \Delta^{\text{risk ratio}}_{\text{censored}} \]
 
 or
 
-\[
-\Delta^{\text{difference}}_{\text{uncensored}} \ne \Delta^{\text{difference}}_{\text{censored}}
-\]
+\[ \Delta^{\text{difference}}_{\text{uncensored}} \ne \Delta^{\text{difference}}_{\text{censored}} \]
 
 For comprehensive discussions on sampling and inference, refer to
 Dahabreh and Hernán (\citeproc{ref-dahabreh2019}{2019}) and Dahabreh
@@ -2996,9 +2967,9 @@ differs from the analytic sample population at the end of the study.
 That is: \textbf{the distribution of effect modifiers is the only
 respect in which the sample will differ from the target population.}
 
-This function will generate data under a range of scenarios.\footnote{See
-  documentation in the \texttt{margot} package: Bulbulia
-  (\citeproc{ref-margot2024}{2024c})}
+This function will generate data under a range of scenarios. Refer to
+documentation in the \texttt{margot} package: Bulbulia
+(\citeproc{ref-margot2024}{2024b})
 
 \begin{Shaded}
 \begin{Highlighting}[]
